<resources>
    <string name="app_name">EmployeeManagement</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name : </string>
    <string name="age">Age : </string>
    <string name="salary">Salary : </string>
    <string name="add_emp">Add Employee Information</string>
    <string name="emp_list">Employee List</string>
    <string name="emp_search_hint">Search by emp name</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="enter_your_age">Please enter your age</string>
    <string name="enter_your_salary">Please enter your salary</string>
    <string name="submit">Submit</string>
    <string name="please_wait">Please wait while data is loading...</string>
    <string name="network_error">Please check your internet connection and try again</string>
    <string name="no_data">No content available</string>
    <string name="success">Success</string>
</resources>
