<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/const_layout_emp_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:paddingHorizontal="@dimen/dimen_10">

    <ImageView
        android:id="@+id/iv_emp_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_emp_name"
        />


    <TextView
        android:id="@+id/tv_emp_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize_14"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/dimen_20"
        app:layout_constraintBottom_toTopOf="@+id/tv_emp_age"
        app:layout_constraintStart_toEndOf="@+id/iv_emp_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_emp_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize_12"
        android:layout_marginLeft="@dimen/dimen_20"
        app:layout_constraintBottom_toTopOf="@+id/tv_emp_salary"
        app:layout_constraintStart_toEndOf="@+id/iv_emp_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_emp_name"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UnknownId" />
    <TextView
        android:id="@+id/tv_emp_salary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize_12"
        android:layout_marginLeft="@dimen/dimen_20"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/iv_emp_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_emp_age"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@android:color/darker_gray"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_emp_photo" />
</androidx.constraintlayout.widget.ConstraintLayout>