...
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <SearchView
                android:layout_width="0dp"
                android:id="@+id/search_emp"
                android:queryHint="@string/emp_search_hint"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:iconifiedByDefault="false"
                app:layout_constraintTop_toTopOf="@+id/cl_emp_list"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_height="wrap_content">

            </SearchView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_emp_info_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_emp"
...
