<?xml version="1.0" encoding="utf-8"?>

    <!-- The main content view -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_activity_emp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <FrameLayout
            android:id="@+id/emplist_activity_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
